--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
     "@prisma/client": "5.22.0",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@react-email/components": "^1.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.26",
     "lucide-react": "^0.556.0",
     "next": "16.0.7",
     "next-auth": "^5.0.0-beta.30",
@@ -21,6 +23,7 @@
     "prisma": "5.22.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "recharts": "^3.5.1",
     "resend": "^6.5.2",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.1.13"
