--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "clsx": "^2.1.1",
     "dodopayments": "^2.8.0",
     "framer-motion": "^12.23.26",
-    "jspdf": "^3.0.4",
+    "jspdf": "^4.0.0",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.556.0",
-    "next": "16.0.7",
+    "next": "^16.1.3",
     "next-auth": "^5.0.0-beta.30",
     "next-themes": "^0.4.6",
     "prisma": "5.22.0",
